--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Attempt 3.loader.js";
+      var loaderUrl = buildUrl + "/Magus 0.3.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Attempt 3.data.unityweb",
-        frameworkUrl: buildUrl + "/Attempt 3.framework.js.unityweb",
-        codeUrl: buildUrl + "/Attempt 3.wasm.unityweb",
+        dataUrl: buildUrl + "/Magus 0.3.data.unityweb",
+        frameworkUrl: buildUrl + "/Magus 0.3.framework.js.unityweb",
+        codeUrl: buildUrl + "/Magus 0.3.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Magus",
